add html base module:base.html

--- a/templates/member/register.html
+++ b/templates/member/register.html
@@ -1,8 +1,5 @@
-<html>
-    <head>
-        <title>Register</title>
-    </head>
-    <body>
-        <h1>Register page</h1>
-    </body>
-</html>
+{% extends "base.html" %}
+{% block title %}用户注册{% endblock %}
+{% block content %}
+会员注册页面
+{% endblock %}
