--- a/templates/member/register.html
+++ b/templates/member/register.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %}
 {% block title %}用户注册{% endblock %}
 {% block content %}
-会员注册页面
+<form>
+  <fieldset style="width:300px;">
+    <legend>用户注册</legend>
+    <label for="username">用户名：</label><input type="text" id="username" name="username" /><br /><br />
+    <label for="password">密码：</label><input type="password" id="password" name="password" /><br />
+  </fieldset>
 {% endblock %}
