--- a/templates/member/login.html
+++ b/templates/member/login.html
@@ -8,7 +8,7 @@
         <li><div><label for="username">用户名：</label></div><input type="text" id="username" name="username" /></li>
         <li><div><label for="password">密码：</label></div><input type="password" id="password" name="password" /></li>
     </ul>
-    <input type="submit" value="登陆" /><input type="reset" />
+    <input type="submit" value="登陆" /><input type="reset" /><a href="/member/register/">注册</a>
   </fieldset>
   {% csrf_token %}
 </form>
